# GIM-2024-2025

./: README.md  main.cc  stream.cpp  stream.h  tb_stream.cpp
.wsdata/: clang_dir_map.json
HLS-stream-test/: main.cc  stream.cpp  stream.h  tb_stream.cpp
PE_Simula/: data_loading.m  xor_validation.py
RTL_test/: RTL_bias_pe.v  array.cpp  bias_pe 2.json  bias_pe.cpp  bias_pe.json  gim_model.h  main.cpp  reference_gim_model.h
RTL_test/.wsdata/: clang_dir_map.json
RTL_test/bias_pe_rtl_test/: compile_commands.json  hls_config.cfg  vitis-comp.json
accelerator_diabetes/: accelerator.cpp  main.cpp
accelerator_diabetes/XOR/: .cproject  .project  hls.app
beta_acc/source/: accelerator_peripheral.cpp  accelerator_peripheral_tb.cpp  act_pe.cpp  array.cpp  beta_accelerator_b.cc  bias_pe.cpp  definitions.h  error_pe.cpp  gim_model_peripheral.h  receive_data.cpp  receive_data_tb.cpp  send_data.cpp  send_data_tb.cpp
cpp_accelerator_generic/: accelerator.cpp  array.cpp  gim_model.h  main.cpp  softmax.cpp
distributed_xor_cpp/controller_xor_cpp/: accelerator_controller.cpp  accelerator_controller_tb.cpp  gim_model_controller.h  send_data.cpp
distributed_xor_cpp/peripheral_xor_cpp/: accelerator_peripheral.cpp  accelerator_peripheral_tb.cpp  error_pe.cpp
fifo_test_source/: definitions.h  transmit.cpp
gim_cpp_final/: accelerator.cpp  main.cc
gim_cpp_final/.wsdata/: clang_dir_map.json
gim_cpp_final/accelerator_component/: compile_commands.json  hls_config.cfg  vitis-comp.json
gim_cpp_final/accelerator_vivado/: accelerator_vivado.xpr
gim_cpp_final/app_component/: vitis-comp.json
gim_cpp_final/app_component1/: compile_commands.json  vitis-comp.json
gim_cpp_final/app_component2/: compile_commands.json  vitis-comp.json
gim_cpp_final/platform/: vitis-comp.json
gim_cpp_final/platform1/: vitis-comp.json
gim_cpp_final/platform2/: vitis-comp.json
gim_cpp_final/project_2/: project_2.xpr
gim_cpp_final/project_2/project_2.ip_user_files/sim_scripts/design_1/xsim/: CMakeLists.txt  Makefile  accelerator.mdd  design_1.sh  elab.opt  file_info.txt  psu_init_gpl.h  vlog.prj
gim_cpp_final/project_2/project_2.ip_user_files/sim_scripts/design_1/xsim/protoinst_files/: design_1.protoinst
original_xor_cpp/: accelerator.cpp  act_pe.cpp  gim_model.h
original_xor_cpp/hls_component/: hls_config.cfg
pe_demo/: act_pe.slx
spi_directio/.rigel_lopper/: system-top.dts.pp
spi_directio/_ide/: .peers.ini  .vitisPlatformRepo.json  workspace_journal.py  workspace_journal_26932.py  workspace_journal_28512.py  workspace_journal_29336.py  workspace_journal_31168.py  workspace_journal_37908.py  workspace_journal_59148.py  workspace_journal_82440.py
spi_directio/ap_hs/: dut.cpp  dut.h  spi_master_logic.h
spi_directio/hls_daw/: GIM_comm.h  dut.cpp  example_acc.cpp  example_acc_b.cc  example_acc_tb.cpp  pulse_gen.cpp  pulse_gen_tb.cpp  receive_data.cpp  send_data.cpp  sub_recv_data.cpp  sub_send_data.cpp  tb.cpp
spi_directio/hls_daw/demo_rec/demo_rec.ip_user_files/mem_init_files/: CMakeLists.txt
spi_directio/hls_ltr/: GIM_comm.h  accelerator.cc  send_data.cpp
spi_directio/platform/: vitis-comp.json
spi_directio2/: spi_master.cpp  spi_master.h  spi_master_logic.h  spi_master_logic_tb.cpp  spi_master_tb.cpp
split_model_logic/: notes_main_board.txt  receiver.py  transmitter.py  xor_validation.py
xor_dis_cpp/: accelerator.cpp  accelerator_controller.cpp  accelerator_controller_tb.cpp  accelerator_peripheral.cpp  act_pe.cpp  array.cpp  bias_pe.cpp  gim_model.h  gim_model_controller.h  main_controller.cpp  receive_data.cpp  send_data.cpp  spi_controller.cpp  spi_controller.h  spi_controller_tb.cpp  spi_module.cpp  spi_module.h  weight_pe.cpp
xor_dis_cpp/xor_distributed_hyw/xor_distributed_hyw/hls/impl/misc/drivers/accelerator_controller_v1_0/src/: CMakeLists.txt  xaccelerator_controller_hw.h
xor_original_cpp/: accelerator.cpp  array.cpp  main.cpp
zhongqi_files/: array.cpp  bias_pe.cpp  csv_import.cpp  gim_model.h  rtl_bias_pe.cpp  rtl_bias_pe.json  rtl_bias_pe.v
(+5149 files in other folders)
